force-app/main/default/objects/Stock_Transaction__c/Stock_Transaction__c.object-meta.xml
<CustomObject>
    <label>Stock Transaction</label>
    <nameField>
        <label>Stock Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StockTransactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>