force-app/main/default/objects/Stock_Transaction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>StockTransactions</relationshipLabel>
    <relationshipName>StockTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>