force-app/main/default/objects/Stock_Transaction__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>StockTransactions</relationshipLabel>
    <relationshipName>StockTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>