force-app/main/default/objects/Stock_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Transfer Out</fullName>
            </value>
            <value>
                <fullName>Transfer In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>